--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/web-component.js"
+            ]
           },
           "configurations": {
             "production": {
